crates/uitest/fixtures/mir_check/move_view_param_zst_call.snap
---
source: crates/uitest/tests/mir_check.rs
assertion_line: 32
expression: res
input_file: fixtures/mir_check/move_view_param_zst_call.fe
---
error[8-0072]: `own` argument requires an owned movable value
  ┌─ move_view_param_zst_call.fe:8:16
  │
8 │     make_pair2(a, b)
  │                ^ this expression has `view Foo` capability and cannot be moved as owned here
  │
  = pass an owned place value, or change the callee parameter mode to borrow/view

error[8-0072]: `own` argument requires an owned movable value
  ┌─ move_view_param_zst_call.fe:8:19
  │
8 │     make_pair2(a, b)
  │                   ^ this expression has `view Foo` capability and cannot be moved as owned here
  │
  = pass an owned place value, or change the callee parameter mode to borrow/view
